frontend/test/should_pass/param_007.grg
rule r(-e:Edge-) {
  x:Node-e-;
  modify {
    delete(x);
  }
}