frontend/test/should_fail/param_013.grg
rule r(a:Node -b:Edge->, -c:Edge->)
{
    modify {}
}
